--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,7 @@
 </head>
 <body>
 	<h1>Home Page</h1>
+	<h3><a href="/sessions/new">Login</a></h3>
+	<p>Not a user? <a href="/users/new">Register Here</a></p>
 </body>
 </html>
