--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -5,5 +5,11 @@
 </head>
 <body>
 	<h1>Sign Up</h1>
+	<form  method="POST" action="/users">
+		<input type="text" name="username" placeholder="Username">
+		<input type="text" name="email" placeholder="Email">
+		<input type="password" name="password" placeholder="Password">
+		<input type="submit">
+	</form>
 </body>
 </html>
