Add table associations and add book form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,8 @@
 	<h1>Home Page</h1>
 	<h3><a href="/sessions/new">Login</a></h3>
 	<p>Not a user? <a href="/users/new">Register Here</a></p>
+	<% if(user) { %>
+		<a href="/books/search">Search for a book</a>
+	<% } %>
 </body>
 </html>
