--- a/views/books/results.ejs
+++ b/views/books/results.ejs
@@ -6,9 +6,16 @@
 <body>
 	<h1>Search Results</h1>
 	<ul>
-	<% for(var i = 0, len = results.length; i < len; i++) { %>
-	<li><%= results[i].title %></li>
-	<% } %>
+		<% for(var i = 0, len = results.length; i < len; i++) { %>
+		<li>
+			<h2><%= results[i].title %></h2>
+			<form action="/books/add" method="POST">
+				<input type="hidden" name="user_id" value="<%= user.id %>">
+				<input type="hidden" name="title" value="<%= results[i].title %>">
+				<input type="submit" value="Add to Bookshelf">
+			</form>
+		</li>
+		<% } %>
 	</ul>
 </body>
 </html>
