--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -7,7 +7,7 @@
 	<h1>Book List</h1>
 	<ul>
 	<% for(var i = 0, len = books.length; i < len; i++) { %>
-		<li><%= books[i].title %></li>
+		<li><a href="<%= books[i].url %>"><%= books[i].title %></a></li>
 	<% } %>
 	</ul>
 </body>
