--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 	<p>Not a user? <a href="/users/new">Register Here</a></p>
 	<% if(user) { %>
 		<a href="/books/search">Search for a book</a>
+		<a href="/books/list">View Your Bookshelf</a>
 	<% } %>
 </body>
 </html>
