--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -7,7 +7,11 @@
 	<h1>Book List</h1>
 	<ul>
 	<% for(var i = 0, len = books.length; i < len; i++) { %>
-		<li><a href="<%= books[i].url %>"><%= books[i].title %></a></li>
+		<li>
+			<h2>
+				<a href="/books/<%= books[i].id %>"><%= books[i].title %></a>
+			</h2>
+		</li>
 	<% } %>
 	</ul>
 </body>
