--- a/public/style/style.css
+++ b/public/style/style.css
@@ -59,6 +59,11 @@ body {
   margin-left: auto;
 }
 
+/* Padding for pages with top Nav */
+.topPad {
+  padding-top: 70px;
+}
+
 /* Padding for spacing */
 .inner {
   padding: 30px;
@@ -67,7 +72,34 @@ body {
 /* Text */
 .white {
   color: #fff;
+} .white:hover {
+  color: #fff;
+  }
+
+.clear {
+  color: rgba(255,255,255,.5);
+} .clear:hover {
+    color: rgba(255,255,255,.5);
+  }
+
+/* Results List Items */
+li.resultsLI {
+  padding: 10px;
+  list-style: none;
 }
+
+/* Top Link Button */
+#top-link-block.affix-top {
+    position: absolute; /* allows it to "slide" up into view */
+    bottom: -82px; /* negative of the offset - height of link element */
+    right: 10px; /* padding from the left side of the window */
+}
+#top-link-block.affix {
+    position: fixed; /* keeps it on the bottom once in view */
+    bottom: 18px; /* height of link element */
+    right: 10px; /* padding from the left side of the window */
+}
+
 @media (min-width: 768px) {
 /*
  * Cover
