--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
           <div class="inner cover">
             <% if(!user) { %>
             	<h1 class="cover-heading white">Bookbook</h1>
-            	<p class="lead white">Be Shelfish.</p>
+            	<p class="lead white"><span class="glyphicon glyphicon-book"></span> Be Shelfish.</p>
 							<p>
 							<form method="POST" action="/sessions" class="form-inline">
 								<input type="text" name="username" placeholder="Username" class="form-control" id="exampleInputEmail2">
@@ -16,11 +16,16 @@
 							</form>
 							</p>
 							<p class="lead white">
-								Not a user? <a href="/users/new">Register</a>
+								Not a user? <a href="/users/new" class="clear">Register</a>
 							</p>
 						<% } else { %>
-							<p><a href="/books/search">Search for a book</a></p>
-							<p><a href="/books/list">View Your Bookshelf</a></p>
+							<p>	
+								<form method="GET" action="/books" class="form-inline">
+									<input type="text" name="title" placeholder="Input keywords here..." class="form-control">
+									<input type="submit" value="Search" class="btn btn-default">
+								</form>
+							<p>
+							<h3><a href="/books/list" class="clear">View Your Bookshelf</a></h3>
 							<form action="/sessions?_method=DELETE" method="POST">
 								<input type="submit" class="btn btn-default" value="Log out">
 							</form>
