--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,9 @@
 	<title>Bookbook. Be Shelfish.</title>
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="icon" 
+      type="image/x-icon"
+      href="images/favicon.ico">
 </head>
 <body class="full">
 <%- body %>
