--- a/views/books/results.ejs
+++ b/views/books/results.ejs
@@ -2,30 +2,51 @@
 <html>
 <head>
 	<title>Search Results</title>
-	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style/results.css">
 </head>
-<body class="topPad">
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	  <div class="container">
-	    ...
-	  </div>
-	</nav>
+<body class="topPad" id="results">
+<nav class="navbar navbar-default navbar-fixed-top gradient navBorder" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand white" href="/"><span class="glyphicon glyphicon-book"></span> Bookbook</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav white">
+        <li><a href="/" class="white">Home</a></li>
+        <li><a href="/books/list" class="white">Bookshelf</a></li>
+      </ul>
+      <form method="GET" action="/books" class="navbar-form navbar-right" role="search">
+  			<div class="form-group">
+  			  <input type="text" class="form-control" name ="title" placeholder="Search further...">
+  			</div>
+  			<button type="submit" class="btn btn-default">Search</button>
+			</form>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 	<div class="container">
 		<div class="row">
-			<h1>Search Results</h1>
 			<ul>
 				<% for(var i = 0, len = results.length; i < len; i++) { %>
 				<li class="resultsLI">
 					<p>
-						<strong><a href="<%= results[i].link %>"><%= results[i].title %></a></strong><br>
+						<h4><strong><a href="<%= results[i].link %>" class="white"><%= results[i].title %></a></strong></h4>
 						<% if(results[i].authors !== undefined) { %>
-							<%= results[i].authors %>
+							<p><%= results[i].authors %></p>
 						<% } else { %>
-						<span>No Author Listed</span>
+							<p>No Author Listed</p>
 						<% } %>
-						<br>
-						<img src="<%= results[i].thumbnail %>" />
+						<p><img src="<%= results[i].thumbnail %>" /></p>
 					</p>
 					<form action="/books/add" method="POST">
 						<input type="hidden" name="user_id" value="<%= user.id %>">
@@ -42,7 +63,7 @@
 	</div>
 	<!-- /.Container -->
 	<span id="top-link-block" class="hidden">
-	    <a href="#top" class="well well-sm"  onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
+	    <a href="#top" class="well well-sm noBg"  onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
 	        <i class="glyphicon glyphicon-chevron-up"></i> Back to Top
 	    </a>
 	</span><!-- /top-link-block -->
