--- a/views/books/results.ejs
+++ b/views/books/results.ejs
@@ -6,39 +6,51 @@
 	<link rel="stylesheet" type="text/css" href="style/results.css">
 </head>
 <body class="topPad" id="results">
-<nav class="navbar navbar-default navbar-fixed-top gradient navBorder" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand white" href="/"><span class="glyphicon glyphicon-book"></span> Bookbook</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav white">
-        <li><a href="/" class="white">Home</a></li>
-        <li><a href="/books/list" class="white">Bookshelf</a></li>
-      </ul>
-      <form method="GET" action="/books" class="navbar-form navbar-right" role="search">
-  			<div class="form-group">
-  			  <input type="text" class="form-control" name ="title" placeholder="Search further...">
-  			</div>
-  			<button type="submit" class="btn btn-default">Search</button>
-			</form>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-book"></span> Bookbook</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form method="GET" action="/books" class="navbar-form navbar-right" role="search">
+  					<div class="form-group">
+  			  		<input type="text" class="form-control" name ="title" placeholder="Search further...">
+  					</div>
+  						<button type="submit" class="btn btn-default">Search</button>
+					</form>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 	<div class="container">
 		<div class="row">
-			<ul>
+		<div class="col-sm-4"></div>
+			<div class="col-sm-4">
 				<% for(var i = 0, len = results.length; i < len; i++) { %>
-				<li class="resultsLI">
+				<div class="well resultsWell">
 					<p>
 						<h4><strong><a href="<%= results[i].link %>" class="white"><%= results[i].title %></a></strong></h4>
 						<% if(results[i].authors !== undefined) { %>
@@ -55,9 +67,10 @@
 						<input type="hidden" name="title" value="<%= results[i].title %>">
 						<input type="submit" value="Add to Bookshelf" class="btn btn-default">
 					</form>
-				</li>
+				</div>
 				<% } %>
-			</ul>
+			</div>
+			<div class="col-sm-4"></div>
 		</div>
 		<!-- /.Row -->
 	</div>
