Edit styling for results

--- a/public/style/results.css
+++ b/public/style/results.css
@@ -1,6 +1,7 @@
 /* Main Styling */
 #results {
-  background: url('https://defeatingthedragons.files.wordpress.com/2014/09/old-books.jpg') no-repeat 50% 14% fixed; 
+  background: url('../images/subtle.jpg') no-repeat fixed, url('../images/image.jpg') no-repeat 50% 14% fixed; 
+  background-blend-mode: multiply;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -15,32 +16,6 @@ p {
 	background: rgba(0,0,0,.7);
 	max-width: 350px;
 	border: 0px;
-}
-
-/* Navbar */
-.navbar-default.gradient {
-	background: #a9db80; /* Old browsers */
-	background: -moz-linear-gradient(top,  #a9db80 0%, #96c56f 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a9db80), color-stop(100%,#96c56f)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #a9db80 0%,#96c56f 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #a9db80 0%,#96c56f 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #a9db80 0%,#96c56f 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #a9db80 0%,#96c56f 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a9db80', endColorstr='#96c56f',GradientType=0 ); /* IE6-9 */
-}
-
-.navbar {
-	border: none;
-}
-
-.navbar-default .navbar-brand {
-	color: #fff;
-}
-
-.navbar-default .navbar-nav>li>a {
-	color: #fff;
-} .navbar-default .navbar-nav>li>a:hover {
-	color: #6c8e51;
 }
 
 /* Results List Items */
