--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="icon" 
       type="image/x-icon"
-      href="images/favicon.ico">
+      href="images/book.ico">
 </head>
 <body class="full">
 <%- body %>
