--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,17 +9,6 @@ a:hover {
   color: #fff;
 }
 
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
-
-
 /*
  * Base structure
  */
@@ -34,7 +23,7 @@ body {
 }
 
 .full {
-  background: url(images/pipe.jpg) no-repeat 50% 14% fixed; 
+  background: url(../images/pipe.jpg) no-repeat 50% 14% fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -82,7 +71,11 @@ body {
     color: rgba(255,255,255,.5);
   }
 
-
+input.customInput {
+  color: #ccc;
+  background: rgba(0,0,0,.6);
+  border: 1px solid rgba(0,0,0,.6);
+}
 @media (min-width: 768px) {
 /*
  * Cover
