--- a/public/style/results.css
+++ b/public/style/results.css
@@ -1,5 +1,5 @@
 /* Main Styling */
-#results {
+.bookStyle {
   background: url('../images/subtle.jpg') no-repeat fixed, url('../images/image.jpg') no-repeat 50% 14% fixed; 
   background-blend-mode: multiply;
   -webkit-background-size: cover;
@@ -16,6 +16,22 @@ p {
 	background: rgba(0,0,0,.7);
 	max-width: 350px;
 	border: 0px;
+}
+
+.customWell {
+  background: rgba();
+  border: 1px solid #fff;
+  border-radius: 15px;
+  padding: 10px 20px;
+  margin: 0px auto 10px auto;
+  width: 300px;
+  background: rgba(0,0,0,.7);
+} .customWell:hover {
+  background: rgba(255,255,255,.7);
+  color: #000;
+} .customWell a:hover {
+  text-decoration: none;
+  color: #000;
 }
 
 /* Results List Items */
