--- a/views/books/results.ejs
+++ b/views/books/results.ejs
@@ -1,37 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Search Results</title>
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style/results.css">
-</head>
-<body class="topPad" id="results">
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-book"></span> Bookbook</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/books/list">Bookshelf</a></li>
-          </ul>
-          <form method="GET" action="/books" class="navbar-form navbar-right" role="search">
-  					<div class="form-group">
-  			  		<input type="text" class="form-control" name ="title" placeholder="Search further...">
-  					</div>
-  						<button type="submit" class="btn btn-default">Search</button>
-					</form>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+<% include ../header.ejs %>
 	<div class="container">
 		<div class="row">
 		<div class="col-sm-4"></div>
@@ -67,8 +34,4 @@
 	        <i class="glyphicon glyphicon-chevron-up"></i> Back to Top
 	    </a>
 	</span><!-- /top-link-block -->
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="javascript/bookbook.js"></script>
-</body>
-</html>
+<% include ../footer.ejs %>
