--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,10 @@
+	<span id="top-link-block" class="hidden">
+	    <a href="#top" class="well well-sm noBg"  onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
+	        <i class="glyphicon glyphicon-chevron-up"></i> Back to Top
+	    </a>
+	</span><!-- /top-link-block -->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="javascript/bookbook.js"></script>
+<script src="../javascript/bookbook.js"></script>
 </body>
 </html>
