--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,12 +22,12 @@
 							<p>	
 								<form method="GET" action="/books" class="form-inline">
 									<input type="text" name="title" placeholder="Input keywords here..." class="form-control customInput">
-									<input type="submit" value="Search" class="btn btn-default">
+									<input type="submit" value="Search" class="btn btn-books">
 								</form>
 							<p>
 							<h3><a href="/books/list" class="clear">View Your Bookshelf</a></h3>
 							<form action="/sessions?_method=DELETE" method="POST">
-								<input type="submit" class="btn btn-default" value="Log out">
+								<input type="submit" class="btn btn-books" value="Log out">
 							</form>
 						<% } %>
 
