--- a/public/style/style.css
+++ b/public/style/style.css
@@ -74,8 +74,17 @@ body {
 input.customInput {
   color: #ccc;
   background: rgba(0,0,0,.6);
-  border: 1px solid rgba(0,0,0,.6);
+  border: 0px;
 }
+
+.btn-books {
+color: #333;
+background-color: rgba(255,255,255,.5);
+border: 0px;
+} .btn-books:hover {
+background-color: rgba(255,255,255,.6);
+}
+
 @media (min-width: 768px) {
 /*
  * Cover
