--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,9 +28,9 @@
           </ul>
           <form method="GET" action="/books" class="navbar-form navbar-right" role="search">
   					<div class="form-group">
-  			  		<input type="text" class="form-control" name ="title" placeholder="Search further...">
+  			  		<input type="text" class="form-control customInput" name ="title" placeholder="Search">
   					</div>
-  						<button type="submit" class="btn btn-default">Search</button>
+  						<button type="submit" class="btn btn-books">Search</button>
 					</form>
         </div><!--/.nav-collapse -->
       </div>
