--- a/public/style/results.css
+++ b/public/style/results.css
@@ -51,6 +51,12 @@ background-color: rgba(255,255,255,.6);
   text-decoration: none;
 }
 
+textarea.form-control {
+background: rgba(2555,2555,255,.3);
+color: #fff;
+text-shadow: 1px 1px 1px #000;
+}
+
 /* Results List Items */
 li.resultsLI {
   padding: 10px;
