--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -3,18 +3,28 @@
 		<h1><%= book.title %></h1>
 		<hr width="50%">
 		<div class="row">
-		<div class="col-sm-4"></div>
-		<div class="col-sm-4">
-		<a href="<%= book.url %>">
-		<div class="customWell2">
-			<p><img src="<%= book.thumb %>" /></p>
-			<p>
-				View on Google Books
-			</p>
+			<div class="col-sm-4"></div>
+				<div class="col-sm-4">
+					<a href="<%= book.url %>">
+						<div class="customWell2">
+							<p><img src="<%= book.thumb %>" /></p>
+							<p>View on Google Books</p>
+						</div>
+					</a>
+				</div>
+			<div class="col-sm-4"></div>
 		</div>
-		</a>
-		</div>
-		<div class="col-sm-4"></div>
+		<div class="row">
+			<div class="col-sm-4"></div>
+			<div class="col-sm-4">
+				<div class="customWell2">
+					<form action="/books/review" method="POST">
+						<p><textarea class="form-control" rows="5" name="review" placeholder="Review: <%= book.title %>"></textarea></p>
+						<input type="Submit" class="btn btn-books">
+					</form>
+				</div>
+			</div>
+			<div class="col-sm-4"></div>
 		</div>
 	</div>
 <% include ../footer.ejs %>
