--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -3,7 +3,7 @@
 		<h1>Book List</h1>
 		<hr width="50%">
 		<div class="row">
-			<% for(var i = 0, len = (books.length) / 2; i < len; i++) { %>
+			<% for(var i = 0, len = books.length; i < len; i++) { %>
 				<div class="col-sm-4">
 					<a href="/books/<%= books[i].id %>" class="noDec">
 						<div class="customWell">
