Add reviews and show page

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -10,6 +10,7 @@
       	  		<%= books[i].title %>
       		  </div>  
       	  </a>
+      	  <p><a href="/reviews/<%= books[i].id %>">Review</a></p>
       	</div>
 			<% } %>
 		</div>
