Fix reviews so all user reviews show up in views

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -11,7 +11,7 @@
       	  		<%= books[i].title %>
       		  </div>  
       	  </a>
-      	  <p><a href="/reviews/<%= books[i].id %>">Review</a></p>
+      	  <p><a href="/reviews/<%= books[i].title %>">Read Reviews</a></p>
       	</div>
       <div class="col-sm-4"></div>
       </div>
