--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -18,8 +18,9 @@
 			<div class="col-sm-4"></div>
 			<div class="col-sm-4">
 				<div class="customWell2">
-					<form action="/books/<%= book.id %>/reviews" method="POST">
+					<form action="/reviews/" method="POST">
 						<p><textarea class="form-control" rows="5" name="body" placeholder="Review: <%= book.title %>"></textarea></p>
+						<input type="hidden" name="book_id" value="<%= book.id %>">
 						<input type="hidden" name="book_name" value="<%= book.title %>">
 						<input type="Submit" class="btn btn-books">
 					</form>
