--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -7,7 +7,7 @@
 			<div class="col-sm-4"></div>
 				<div class="col-sm-4">
 					<div class="customWell2">
-						<p>User:<%= reviews[i].user_id %></p>
+						<p>User:<%= reviews[i].username %></p>
 						<p><%= reviews[i].body %></p>
 					</div>
 				</div>
