--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -1,19 +1,31 @@
 <% include ../header.ejs %>
 	<% if (reviews[0] !== undefined) { %>
-	<h1><%= reviews[0].book_name %> - Review</h1>
+	<h1><%= book.title %> - Review</h1>
 	<hr width="50%">
 			<% for (var i = 0, len = reviews.length; i < len; i++) { %>
 			<div class="row">
 			<div class="col-sm-4"></div>
 				<div class="col-sm-4">
 					<div class="customWell2">
-						<p>User:<%= reviews[i].username %></p>
 						<p><%= reviews[i].body %></p>
 					</div>
 				</div>
 				<div class="col-sm-4"></div>
 			</div>
 			<% } %>
+			<div class="row">
+			<div class="col-sm-4"></div>
+			<div class="col-sm-4">
+				<div class="customWell2">
+					<form action="/reviews/" method="POST">
+						<p><textarea class="form-control" rows="5" name="body" placeholder="Review: <%= book.title %>"></textarea></p>
+						<input type="hidden" name="book_id" value="<%= book.id %>">
+						<input type="Submit" class="btn btn-books">
+					</form>
+				</div>
+			</div>
+			<div class="col-sm-4"></div>
+		</div>
 		<% } else { %>
 			<h1>This book has no reviews.</h1>
 			<p><a href="/books/<%= params %>">Leave a review</a></p>
