--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 							<form method="POST" action="/sessions" class="form-inline">
 								<input type="text" name="username" placeholder="Username" class="form-control customInput" id="exampleInputEmail2">
 								<input type="password" name="password" placeholder="Password" class="form-control customInput" id="exampleInputPassword2">
-								<input type="submit" class="btn btn-default" value="Login">
+								<input type="submit" class="btn btn-books" value="Login">
 							</form>
 							</p>
 							<p class="lead white">
@@ -25,7 +25,7 @@
 									<input type="submit" value="Search" class="btn btn-books">
 								</form>
 							<p>
-							<h3><a href="/books/list" class="clear">View Your Bookshelf</a></h3>
+							<h3><a href="/books/list" class="clear">View Bookshelf</a></h3>
 							<form action="/sessions?_method=DELETE" method="POST">
 								<input type="submit" class="btn btn-books" value="Log out">
 							</form>
