--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -7,7 +7,7 @@
 			<div class="col-sm-4"></div>
 				<div class="col-sm-4">
 					<div class="customWell2">
-						<p><%= reviews[i].body %></p>
+						<p><strong><%= reviews[i].username %>: </strong><%= reviews[i].body %></p>
 					</div>
 				</div>
 				<div class="col-sm-4"></div>
@@ -16,6 +16,6 @@
 		<% } else { %>
 			<h1>This book has no reviews.</h1>
 		<% } %>
-			<p><a href="/books/<%= params %>">Leave a review</a></p>
+			<p><a href="/books/<%= params %>">Add a review</a></p>
 			<button onclick="goBack()" class="btn btn-books">Go Back</button>
 <% include ../footer.ejs %>
